# kalshi-weather-bot

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: implementation_details.md  implementation_plan.md  task.md  technical_documentation.md  usage_guide.md
kalshi_weather/: __init__.py  __main__.py  cli.py
kalshi_weather/cli/: __init__.py  bot.py  commands.py  display.py
kalshi_weather/config/: __init__.py  cities.py  settings.py
kalshi_weather/contracts/: __init__.py  base.py  high_temp.py
kalshi_weather/core/: __init__.py  models.py
kalshi_weather/data/: __init__.py  dsm.py  historical.py  markets.py  stations.py  weather.py
kalshi_weather/engine/: __init__.py  edge_detector.py  probability.py
kalshi_weather/utils/: __init__.py  logging.py
scripts/: test_kalshi_live.py
src/: config.py  interfaces.py
src/data/: __init__.py  kalshi_client.py  station_parser.py  weather_models.py
tests/: test_bot.py  test_edge_detector.py  test_kalshi_client.py  test_probability.py  test_station_parser.py  test_weather_models.py
